@@ -207,8 +207,10 @@ regexp.  If it matches, the text in question is not a signature."
   (if (and (fboundp 'image-type-available-p)
 	   (image-type-available-p 'xbm))
       'gnus-article-display-xface
-    (if (eq 0 (string-match "#define"
-                            (shell-command-to-string "uncompface -X")))
+    (if (or (and (boundp 'gnus-article-compface-xbm)
+                 gnus-article-compface-xbm)
+            (eq 0 (string-match "#define"
+                                (shell-command-to-string "uncompface -X"))))
 	"{ echo '/* Width=48, Height=48 */'; uncompface; } | display -"
       "{ echo '/* Width=48, Height=48 */'; uncompface; } | icontopbm | \
 display -"))
